Update report (future work + fix citations)

--- a/design-docs/Report Bibliography.bib
+++ b/design-docs/Report Bibliography.bib
@@ -106,3 +106,18 @@
   date={2014},
   url={http://www.drdobbs.com/jvm/why-build-your-java-projects-with-gradle/240168608}
 }
+
+@book{learningpython5thed,
+  author={Lutz, Mark},
+  title={Learning Python},
+  year={2013},
+  publisher={O'Reilly Media},
+  isbn={1449355730}
+}
+
+@online{intellijidearefactoring,
+  author={{JetBrains s.r.o}},
+  title={Refactoring Source Code - Help | IntelliJ IDEA},
+  date={2018},
+  url={https://www.jetbrains.com/help/idea/refactoring-source-code.html}
+}
