Update report (future work re. plugins)

--- a/design-docs/Report.tex
+++ b/design-docs/Report.tex
@@ -672,7 +672,11 @@ I also had the pleasure of working with highly esteemed developers, including Ce
 This was followed up with numerous commits on the ANTLR grammars-v4, and JCommander repositories (see \ref{apx:OpenSourceContributions}).
 
 \subsection{Future work}
-A wider range of searching and refactoring tools should be evaluated, to help guide the future development of csar and focus efforts on the most important features.
+A wider range of searching and refactoring tools should be evaluated, to guide future development of csar and focus efforts on the most important features.
+
+The plugin system should be improved by potentially allowing language-specific query languages.
+Furthermore, it could be enhanced by setting strict permissions on plugins to prevent unexpected or malicious behaviour.
+For example, perhaps plugins cannot access or modify system files, or access the internet.
 
 It would be useful to rewrite Csar Query as part of an elaborate research project.
 Then, csar could be reimplemented in full, with changes focused on csar-java, in an attempt to ensure it is bug-free, and theoretically sound.
